# agent-workflow-engine

./: LICENSE
workflow/: .gitignore  CLAUDE.md  README.md  harness-progress.txt  harness-tasks.json  pyproject.toml  requirements-dev.txt  requirements.txt
workflow/.github/ISSUES/: 01-project-scaffolding.md  02-design-system.md  03-api-layer-auth.md  04-workflow-list-page.md  05-canvas-editor-core.md  06-canvas-editor-params-connections.md  07-canvas-editor-dsl-sync.md  08-task-trigger-and-list.md  09-task-detail-page.md  10-template-market.md  11-import-export-settings.md  12-retry-and-cancel.md  13-edge-cases-and-polish.md
workflow/docs/: FE-vision-tokens.md  ai-agent-workflow-engine-prd.md  design-prototype.html  frontend-ui-prd.md
workflow/examples/: README.md  cli_demo.yaml  demo_nodes.py  llm_tool_demo.yaml  two_node_demo.py
workflow/scripts/: check_versions.py  verify_harness.py  verify_langchain.py
workflow/src/agent_engine/: __init__.py  checkpointer.py  config.py  engine.py
workflow/src/agent_engine/cli/: __init__.py  __main__.py  main.py  run_index.py
workflow/src/agent_engine/cli/commands/: __init__.py  _output.py  resume.py  run.py  validate.py
workflow/src/agent_engine/dsl/: __init__.py  builder.py  loader.py  models.py
workflow/src/agent_engine/llm/: __init__.py  providers.py
workflow/src/agent_engine/nodes/: __init__.py  base.py  condition_node.py  llm_node.py  tool_node.py
workflow/tests/: conftest.py  test_builder_llm_tool.py  test_cli.py  test_condition_node.py  test_config.py  test_dsl_loader.py  test_dsl_models.py  test_edges.py  test_execution.py  test_llm_node.py  test_node_integration.py  test_node_registration.py  test_resume.py  test_tool_node.py
workflow/web/: index.html  package-lock.json  package.json  vite.config.ts
workflow/web/src/: App.tsx  main.tsx
workflow/web/src/api/: auth.ts  client.ts  runs.ts  templates.ts  workflows.ts
workflow/web/src/components/Canvas/: CanvasGrid.tsx  CanvasNode.tsx  DslEditor.tsx  EditorCanvas.tsx  FlowParticles.tsx  dslSync.ts  nodeMeta.ts
workflow/web/src/pages/: EditorPage.tsx  LoginPage.tsx  RunDetailPage.tsx  RunListPage.tsx  SettingsPage.tsx  TemplateMarketPage.tsx  WorkflowListPage.tsx
workflow/web/src/store/: AuthContext.tsx
workflow/web/src/styles/: animations.css  nodes.css  tokens.css
workflow/web/src/types/: configSchemas.ts  workflow.ts
(+11 files in other folders)
