[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workflow-engine"
version = "0.1.0"
description = "AI Agent 工作流引擎（基于 LangGraph StateGraph）"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "yun" }]

# 核心依赖
dependencies = [
    "langgraph>=0.2.0,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "pydantic>=2.0,<3.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
# 开发依赖
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

# 覆盖率配置
[tool.coverage.run]
source = ["src/agent_engine"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

# 代码风格
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
